cmake_minimum_required(VERSION 2.8)
PROJECT(faster)
SET(CMAKE_CXX_FLAGS "-std=c++11")
SET(CMAKE_BUILE_TYPE DEBUG) 
SET(CMAKE_C_FLAGS_DEBUG "-g -Wall") 

ADD_SUBDIRECTORY(threadpool)
ADD_SUBDIRECTORY(unit)
ADD_SUBDIRECTORY(testUnit)
ADD_SUBDIRECTORY(netUnit)
ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(workManager)






